# esp_ota_update_server

./: CMakeLists.txt  Kconfig  README.md
examples/: README.md
examples/device/cdc_ecm_ota/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/device/cdc_ecm_ota/main/: CMakeLists.txt  main.c
examples/device/ethernet_ota/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/host/https_server/: README.md  https_sever.py
include/: ota_server.h
include_private/: ota_update.h  send_eeprom.h
src/: ota_server.c  ota_update.c  send_eeprom.c
